# vgi-conform

./: CLAUDE.md  Makefile  README.md  conform_worker.py  conftest.py  pyproject.toml
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: card_url_postal.test  discovery.test  email.test  iban_vat.test  phone.test
tests/: test_scalars.py  test_tables.py  test_validators.py
vgi_conform/: __init__.py  meta.py  scalars.py  schema_utils.py  tables.py  validators.py
